--- a/Index.html
+++ b/Index.html
@@ -69,3 +69,7 @@
     <form action="newsletter.php" method="post">
       <input type="email" name="email" placeholder="Your email">
       <input type="submit" value="Subscribe">
+      
+      <div id="social-media-feed"></div>
+      <\body>
+</html>
