--- a/Index.html
+++ b/Index.html
@@ -3,11 +3,11 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="Style.css">
 
   <!-- JS -->
 
-  <script src="script.js"></script>
+  <script src="Script.js"></script>
   <title>My Website</title>
 </head>
 <body>
