--- a/Index.html
+++ b/Index.html
@@ -76,5 +76,5 @@
       <input type="submit" value="Subscribe">
       
       <div id="social-media-feed"></div>
-      <\body>
+      </body>
 </html>
