--- a/Index.html
+++ b/Index.html
@@ -32,15 +32,18 @@
     <section id="meet-our-team">
       <h2>Meet Our Team</h2>
       <ul>
-        <li><img src="images/team-member-1.jpg" alt="Team Member 1">
+        <li>
+          <img src="images/team-member-1.jpg" alt="Team Member 1">
           <h3>Team Member 1</h3>
           <p>Team Member 1 is a software engineer who specializes in web development. They have been with the company for 5 years and are passionate about creating user-friendly and engaging websites.</p>
         </li>
-        <li><img src="images/team-member-2.jpg" alt="Team Member 2">
+        <li>
+          <img src="images/team-member-2.jpg" alt="Team Member 2">
           <h3>Team Member 2</h3>
           <p>Team Member 2 is a graphic designer who specializes in creating visually appealing and informative web designs. They have been with the company for 3 years and are always looking for new ways to improve the look and feel of our websites.</p>
         </li>
-        <li><img src="images/team-member-3.jpg" alt="Team Member 3">
+        <li>
+          <img src="images/team-member-3.jpg" alt="Team Member 3">
           <h3>Team Member 3</h3>
           <p>Team Member 3 is a content writer who specializes in creating engaging and informative content for our websites. They have been with the company for 2 years and are always looking for new ways to tell our stories in a way that resonates with our audience.</p>
         </li>
@@ -74,7 +77,7 @@
     <form action="newsletter.php" method="post">
       <input type="email" name="email" placeholder="Your email">
       <input type="submit" value="Subscribe">
-      
-      <div id="social-media-feed"></div>
-      </body>
+    </form>
+  </section>
+</body>
 </html>
