--- a/Index.html
+++ b/Index.html
@@ -3,11 +3,11 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="Style.css">
+  <link rel="stylesheet" href="style.css">
 
   <!-- JS -->
 
-  <script src="Script.js"></script>
+  <script src="script.js"></script>
   <title>My Website</title>
 </head>
 <body>
@@ -21,7 +21,7 @@
       <li><a href="#">Contact Us</a></li>
       <li><a href="#">Feedback</a></li>
       <li><a href="#">Newsletter</a></li>
-      <li><a href="#">Spotify</a></li>
+
     </ul>
   </nav>
   <main>
@@ -79,5 +79,6 @@
       <input type="submit" value="Subscribe">
     </form>
   </section>
+  <div id="social-media-feed"></div>
 </body>
-</html>
+</html
